<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:tools="http://schemas.android.com/tools"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="1dp"
                                    android:layout_marginLeft="4dp"
                                    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ingredient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="granulated sugar"/>

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textColor="@color/colorAccent"
            tools:text="0.5"/>

        <TextView
            android:id="@+id/measure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            tools:text="CUP"/>
    </LinearLayout>

</android.support.v7.widget.CardView>